Remove uses of java.sql in favor of java.time classes